; ModuleID = '/home/carl/AnghaBench/numpy/numpy/random/src/legacy/extr_legacy-distributions.c_legacy_f.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/random/src/legacy/extr_legacy-distributions.c_legacy_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @legacy_f(i32* %0, double %1, double %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store double %1, double* %5, align 8
  store double %2, double* %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load double, double* %5, align 8
  %9 = call double @legacy_chisquare(i32* %7, double %8)
  %10 = load double, double* %6, align 8
  %11 = fmul double %9, %10
  %12 = load i32*, i32** %4, align 8
  %13 = load double, double* %6, align 8
  %14 = call double @legacy_chisquare(i32* %12, double %13)
  %15 = load double, double* %5, align 8
  %16 = fmul double %14, %15
  %17 = fdiv double %11, %16
  ret double %17
}

declare dso_local double @legacy_chisquare(i32*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
